[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/ubuntu50.tres" type="DynamicFont" id=1]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=2]
[ext_resource path="res://mocraClassic/parameters/Control.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.623529 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -750.0
margin_top = -300.0
margin_right = 750.0
margin_bottom = 300.0
color = Color( 0.701961, 0.172549, 0.172549, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -100.0
margin_right = 350.0
margin_bottom = 100.0
custom_constants/separation = 30
alignment = 1

[node name="musicContainer" type="Control" parent="VBoxContainer"]
margin_right = 700.0
margin_bottom = 70.0
rect_min_size = Vector2( 500, 70 )

[node name="musicSlider" type="HSlider" parent="VBoxContainer/musicContainer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -15.0
margin_bottom = 15.0

[node name="musicLabel" type="Label" parent="VBoxContainer/musicContainer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -28.5
margin_right = 320.0
margin_bottom = 28.5
custom_fonts/font = ExtResource( 1 )
text = "Music Volume"

[node name="musicVar" type="Label" parent="VBoxContainer/musicContainer"]
margin_left = 545.0
margin_top = 7.0
margin_right = 585.0
margin_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
text = "1"

[node name="soundContainer" type="Control" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 700.0
margin_bottom = 170.0
rect_min_size = Vector2( 500, 70 )

[node name="soundLabel" type="Label" parent="VBoxContainer/soundContainer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -28.5
margin_right = 320.0
margin_bottom = 28.5
custom_fonts/font = ExtResource( 1 )
text = "Sound Volume"

[node name="soundSlider" type="HSlider" parent="VBoxContainer/soundContainer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -15.0
margin_bottom = 15.0
rect_min_size = Vector2( 300, 30 )

[node name="soundVar" type="Label" parent="VBoxContainer/soundContainer"]
margin_left = 545.0
margin_top = 7.0
margin_right = 585.0
margin_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
text = "1"

[node name="bindContainer" type="Control" parent="VBoxContainer"]
margin_top = 200.0
margin_right = 700.0
margin_bottom = 270.0
rect_min_size = Vector2( 500, 70 )

[node name="controlsbindingButton" type="Button" parent="VBoxContainer/bindContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -35.0
margin_right = 200.0
margin_bottom = 35.0
rect_min_size = Vector2( 400, 70 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "Bind controls"

[node name="saveContainer" type="Control" parent="VBoxContainer"]
margin_top = 300.0
margin_right = 700.0
margin_bottom = 370.0
rect_min_size = Vector2( 500, 70 )

[node name="saveButton" type="Button" parent="VBoxContainer/saveContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
rect_min_size = Vector2( 200, 70 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "Save"

[node name="quitButton" type="Button" parent="."]
margin_left = 1647.0
margin_top = 250.0
margin_right = 1697.0
margin_bottom = 307.0
rect_min_size = Vector2( 50, 50 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "X"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
window_title = "Veuillez confirmerâ€¦"
dialog_text = "Changed parameters will be ignored"

[connection signal="value_changed" from="VBoxContainer/musicContainer/musicSlider" to="." method="_on_musicSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/soundContainer/soundSlider" to="." method="_on_soundSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/bindContainer/controlsbindingButton" to="." method="_on_controlsbindingButton_pressed"]
[connection signal="pressed" from="VBoxContainer/saveContainer/saveButton" to="." method="_on_saveButton_pressed"]
[connection signal="pressed" from="quitButton" to="." method="_on_quitButton_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
